--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.18.2",
+        "cors": "^2.8.5",
         "express": "^4.16.2",
+        "is-empty": "^1.2.0",
         "nodemailer": "^6.0.0"
     }
 }
